PRIMERO-366 UAT7:  allow for date or date range on Incident

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -616,6 +616,8 @@ en:
     date_range:
       from: "From"
       to: "To"
+      date: "Date"
+      date_range: "Date Range"
 
   replication:
     label: Replication
