--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,8 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  "true": "Yes"
+  "false": "No"
   home:
     fr: "Français"
     en: "English"
