PRIMERO-451 Refactor Tracing Request: Refactoring tracing request to make it work because solr changes. Changes was based on what was done for Incidents and Children.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -358,6 +358,8 @@ en:
     register_new_tracing_request: "Create a New Tracing Request"
 
   tracing_request:
+    name_of_inquirer: "Name of Inquirer"
+    date_of_inquiry: "Date of Inquiry"
     last_updated: "Last updated"
     registered_by: "Registered by"
 
