--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -226,6 +226,7 @@ en:
     history_of: "History of %{short_id}"
 
   case:
+    label: "Case ID"
     flagged_by: "Flagged By"
     last_updated: "Last updated"
     registered_by: "Registered by"
