--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -734,6 +734,8 @@ en:
         body: "There were problems with the following fields:"
 
     models:
+      date_range_invalid: "<span>%{field_name}:</span> Please enter a valid date range 'From:' should be earlier than 'To:'"
+
       photo:
         primary_photo_id: "Failed trying to set '%{photo_id}' to primary photo: no such photo key"
         photo_size: "Please upload a file smaller than 10mb"
