--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -381,7 +381,7 @@ en:
     enquirer_date: "Date of Inquiry"
 
     history_of: "History of %{short_id}"
-    
+
   tracing_requests:
     register_new_tracing_request: "Create a New Tracing Request"
 
@@ -824,6 +824,10 @@ en:
 
       password_recovery_request:
         user_name_mandatory: "Please enter a valid user name"
+
+      ownership:
+        associated_user_ids_present: "A user must be associted with this record"
+        module_id_prsesnt: "A module must be associated wit this record"
 
 
 
