--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -877,3 +877,5 @@ en:
         all: Export All to CSV
         one: Export to CSV
         selected: Export Selected to CSV
+
+  per_page_translation: "Per page _MENU_"
