PRIMERO-474 Cases -> Survivor Information: Add 'Create Incident' button.
When the user is editing some GBV cases and click on 'Create Incident' button, the application will save the GBV Case record and redirect to the Incident form and fill in the GBV Incident Individual Details with the information from GBV Cases Survivor Information.

db/forms/incident/gbv_individual_details.rb some fields were changed to match the type from both forms sections.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,6 +93,7 @@ en:
      change_password: "Change Password"
      enable_photo_wall: "Enable photo wall"
      disable_photo_wall: "Disable photo wall"
+     create_incident: "Create Incident"
 
   cases:
     label: "Cases"
