--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,7 +96,7 @@ en:
 
   cases:
     label: "Cases"
-    register_new_case: "Create a New Case"
+    register_new_case: "New Case"
     export: "Export"
     filter_by:
       valid: "Valid records"
@@ -304,7 +304,7 @@ en:
 
   incidents:
     label: "Incidents"
-    register_new_incident: "Create a New Incident"
+    register_new_incident: "New Incident"
 
     filter_by:
       valid: "Valid records"
@@ -355,7 +355,7 @@ en:
 
   tracing_request:
     label: "Tracing Requests"
-    register_new_tracing_request: "Create a New Tracing Request"
+    register_new_tracing_request: "New Tracing Request"
     change_log: "Change Log"
     name_of_inquirer: "Name of Inquirer"
     date_of_inquiry: "Date of Inquiry"
@@ -383,7 +383,7 @@ en:
     history_of: "History of %{short_id}"
     
   tracing_requests:
-    register_new_tracing_request: "Create a New Tracing Request"
+    register_new_tracing_request: "New Tracing Request"
 
   preposition:
     on_label: "on"
