PRIMERO-486 Create Cases -> Case Closure Form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -770,6 +770,7 @@ en:
         document_size: "Please upload a document smaller than 10mb"
         documents_count: "You are only allowed %{documents_count} documents per case."
         document_format: "Executable files are not allowed."
+        date_closure: "The Case Closure Date should be greater or equal than Case Opening Date."
 
       field:
         display_name_presence: "Display name must not be blank"
