--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -895,6 +895,10 @@ en:
         all: Export All to Excel
         one: Export to Excel
         selected: Export Selected to Excel
+      json:
+        all: Export All to JSON
+        one: Export to JSON
+        selected: Export Selected to JSON
 
   per_page_translation: "Per page _MENU_"
   import_successful: "File was imported successfully"
