--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -658,7 +658,7 @@ en:
     successfully_added: "Field successfully added"
     updated: "Field updated"
     deleted: "Field %{display_name} has been deleted."
-    add: "Add"
+    add: "New Field"
     type: "Field type"
     move_to: "Move to"
     select_box_empty_item: "(Select...)"
