--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -534,7 +534,9 @@ en:
       user: "Users, Groups, Roles"
       metadata: "Forms, Lookups"
       system: "System"
-      manager: "Manager"
+      self: "Access only my records"
+      group: "Access all records owned by users in my group"
+      all: "Access all records"
 
   forms:
     label: "Forms"
