PRIMERO-490 add date to Flag feature.
1. Added app/models/concerns/flagable.rb to include the flag functionality in Incident and TrancingRequest.
2. Added date field to the flag dialog box and model.
3. refactoring _mark_as.html.erb to be reusable for Incident and TracingRequest.
4. Added capybara test cases.
5. Added app/views/tracing_requests/_export.html.erb because was missed and break tracing request.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,6 +159,7 @@ en:
     flag_record: "Flag Record"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
+    flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
     unflag_label: "Unflag"
@@ -237,6 +238,7 @@ en:
     flag_record: "Flag Record"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
+    flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
     unflag_label: "Unflag"
@@ -327,10 +329,12 @@ en:
     flag_record: "Flag Record"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
+    flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
+    flagged_as_suspected: "Flagged by"
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
     duplicate_header: "Marking %{child_name} as Duplicate"
     flag_error_message: "Please explain why you are flagging this record."
@@ -369,6 +373,16 @@ en:
     registered_by: "Registered by"
     edit_photo: "Edit photo"
     export_error: "No Records Available!"
+    flag_record: "Flag Record"
+    flag_label: "Flag"
+    flag_reason: "Flag Reason"
+    flag_reason_date: "Date (optional)"
+    unflag_record: "Unflag Record"
+    unflag_reason: "Unflag Reason"
+    unflag_label: "Unflag"
+    unflag_error_message: "Please explain why you are unflagging this record."
+    flag_error_message: "Please explain why you are flagging this record."
+    flagged_as_suspected: "Flagged by"
 
     actions:
       change_log: "Change Log"
