--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -895,6 +895,10 @@ en:
       all: Export All to Photo Wall
       one: Export to Photo Wall
       selected: Export Selected to Photo Wall
+    case_pdf:
+      all: Export All to PDF
+      one: Export to PDF
+      selected: Export Selected to PDF
     csv:
       all: Export All to CSV
       one: Export to CSV
