Second pass of flagging unflagging records

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -156,7 +156,7 @@ en:
     last_updated: "Last updated"
     registered_by: "Registered by"
     mark_as_duplicate: "Mark as Duplicate"
-    flag_record: "Flag Record"
+    flag_record: "Flags"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
     flag_reason_date: "Date (optional)"
@@ -322,7 +322,7 @@ en:
     last_updated: "Last updated"
     registered_by: "Registered by"
     mark_as_duplicate: "Mark as Duplicate"
-    flag_record: "Flag Record"
+    flag_record: "Flags"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
     flag_reason_date: "Date (optional)"
@@ -370,7 +370,7 @@ en:
     last_updated: "Last updated"
     registered_by: "Registered by"
     edit_photo: "Edit photo"
-    flag_record: "Flag Record"
+    flag_record: "Flag"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
     flag_reason_date: "Date (optional)"
