--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
       urgent_protection_concern: "Urgent Protection Concern:"
       risk_level: "Risk Level:"
       current_location: "Current Location"
+      registration_date: "Registration Date:"
       case_open_date: "Case Open Date:"
       record_state: "Record State:"
     order_by:
