PRIMERO-606 select records from list view:     Added cucumber testcase

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -169,6 +169,7 @@ en:
     duplicate_header: "Marking %{child_name} as Duplicate"
     flag_error_message: "Please explain why you are flagging this record."
     flag_records_error_message: "Please explain why you are flagging these records."
+    selected_records_error_message: "Please select one or more records to flag."
     investigation_details: "Investigation Details:"
     reunite_details: "Reunite Details:"
     another_duplicate_before_link: "Another record has been marked as a duplicate of this one. Click"
@@ -341,6 +342,7 @@ en:
     duplicate_header: "Marking %{child_name} as Duplicate"
     flag_error_message: "Please explain why you are flagging this record."
     flag_records_error_message: "Please explain why you are flagging these records."
+    selected_records_error_message: "Please select one or more records to flag."
     investigation_details: "Investigation Details:"
     reunite_details: "Reunite Details:"
     another_duplicate_before_link: "Another record has been marked as a duplicate of this one. Click"
@@ -381,11 +383,12 @@ en:
     last_updated: "Last updated"
     registered_by: "Registered by"
     edit_photo: "Edit photo"
-    flag_record: "Flag"
+    flag_record: "Flags"
     flag_label: "Flag"
     flag_reason: "Flag Reason"
     flag_reason_date: "Date (optional)"
     flag_records_error_message: "Please explain why you are flagging these records."
+    selected_records_error_message: "Please select one or more records to flag."
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
     unflag_label: "Unflag"
