Added a message for empty subforms and added status to subform heading

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,9 @@ en:
      create_incident: "Create Incident"
      guiding_questions: "Guiding Questions"
 
+  placeholders:
+    subforms: "Click the edit button to add %{form} details"
+
   cases:
     label: "Cases"
     register_new_case: "New Case"
