--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,8 @@ en:
     enter_each_in_one_line: "Enter each option on a new line"
     record_count: "Showing %{start} to %{end} of %{total} records"
     form_sections_help_text_for_edit: "Click the EDIT button to add %{form_section_name} details"
+    system_generated_followup_flag: "mandatory follow up visit"
+    system_generated_followup_unflag: "expired"
 
   data_base:
     delete_all_documents: "Deleted all child documents"
