--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,7 @@ en:
     enter_each_in_one_line: "Enter each option on a new line"
     record_count: "Showing %{start} to %{end} of %{total} records"
     form_sections_help_text_for_edit: "Click the EDIT button to add %{form_section_name} details"
+    enable_disable_record: "Clicking OK will change the state of this record to '%{action}'"
 
   data_base:
     delete_all_documents: "Deleted all child documents"
@@ -101,6 +102,7 @@ en:
      filter_label: "Filter:"
      filter: "Apply Filter"
      flag_records: "Flag"
+     ok: 'OK'
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
@@ -922,7 +924,11 @@ en:
       with_details: "with these details:"
 
   actions:
-    button: 'Actions'
+    button: "Actions"
+    enable_disable: "Enable/Disable"
+    description:
+      valid: "Valid records"
+      invalid: "Invalid records"
 
   exports:
     no_records: "No Records Available!"
