added children filter

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -339,7 +339,10 @@ en:
       social_worker: "Field/Case/Social Worker:"
       status: "Status:"
       age_range: "Age Range:"
-      children: "Children (Boys, Girls, Unknown):"
+      children: "Children:"
+      boys: "Boys"
+      girls: "Girls"
+      unknown: "Unknown"
       verification_status: "Verification Status:"
       incident_date: "Incident Date:"
       unaccompanied_separated_status: "Protection Status:"
