moved photo filter to bottom and added translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,7 @@ en:
       case_open_date: "Case Open Date:"
       record_state: "Record State:"
       photo: "Photo:"
+      photo_label: "Has Photo?"
     order_by:
       most_recently: "Most recently"
       label: "Order by"
