cucumber tests for incident filters and related fixes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,7 +126,7 @@ en:
       protection_status: "Protection Status:"
       urgent_protection_concern: "Urgent Protection Concern:"
       risk_level: "Risk Level:"
-      current_location: "Current Location"
+      current_location: "Current Location:"
       registration_date: "Registration Date:"
       case_open_date: "Case Open Date:"
       record_state: "Record State:"
@@ -339,7 +339,7 @@ en:
       flag_label: "Flagged?"
       violation: "Violation:"
       violence_type: "Violence Type:"
-      social_worker: "Field/Case/Social Worker:"
+      social_worker: "Case Worker:"
       status: "Status:"
       age_range: "Age Range:"
       children: "Children:"
@@ -347,6 +347,7 @@ en:
       girls: "Girls"
       unknown: "Unknown"
       verification_status: "Verification Status:"
+      incident_location: "Incident Location:"
       incident_date: "Incident Date:"
       unaccompanied_separated_status: "Protection Status:"
       armed_force_group_name: "Armed Force or Group:"
