respelling organization to the American way

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -287,7 +287,7 @@ ar:
   actions: "نشاط"
   phone: "الهاتف"
   email: "البريد الإلكتروني"
-  organisation: "المنظمة"
+  organization: "المنظمة"
   position: "المنصب"
   location: "الموقع"
   false: "خطأ"
@@ -532,7 +532,7 @@ ar:
         password_confirmation: "الرجاء تأكيد كلمة السر"
         password_mismatch: "الحقول كلمة المرور لم يكن لديك نفس كلمة المرور"
         role_ids: "الرجاء إختيار دور واحد على الأقل"
-        organisation: "الرجاء إدخال إسم المنظمة التي ينتمي لها المستخدم"
+        organization: "الرجاء إدخال إسم المنظمة التي ينتمي لها المستخدم"
         user_name: "إسم المستخدم غير صالح"
         email: "البريد الإلكتروني غير صالح"
         user_name_uniqueness: "إسم المستخدم قد تم إختياره من قبل! الرجاء إختيار إسم آخر"
