--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -531,7 +531,7 @@ en:
   actions: "actions"
   phone: "Phone"
   email: "Email"
-  organisation: "Organisation"
+  organization: "Organisation"
   position: "Position"
   location: "Location"
   false: "false"
@@ -801,7 +801,7 @@ en:
         password_confirmation: "Please enter password confirmation"
         password_mismatch: "The password fields do not have the same password"
         role_ids: "Please select at least one role"
-        organisation: "Please enter the user's organisation name"
+        organization: "Please enter the user's organization name"
         user_name: "Please enter a valid user name"
         email: "Please enter a valid email address"
         user_name_uniqueness: "User name has already been taken! Please select a new User name"
