--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -302,7 +302,7 @@ zh:
   actions: "活动"
   phone: "电话"
   email: "邮箱"
-  organisation: "组织"
+  organization: "组织"
   position: "职位"
   location: "位置"
   false: "false假"
@@ -554,7 +554,7 @@ zh:
         password_confirmation: "请输入密码确认"
         password_mismatch: "密码字段不具有相同的密码"
         role_ids: "请选择至少一个角色"
-        organisation: "请输入用户的组织名"
+        organization: "请输入用户的组织名"
         user_name: "请输入一个有效的用户名"
         email: "请输入一个有效的邮箱地址"
         user_name_uniqueness: "用户名已存在! 请选择一个新的用户名"
