--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -950,7 +950,8 @@ en:
 
   actions:
     button: "Actions"
-    enable_disable: "Enable/Disable"
+    enable: "Enable"
+    disable: "Disable"
     description:
       valid: "Valid record"
       invalid: "Invalid record"
