enhancing uri handling and errors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -902,7 +902,8 @@ en:
 
       replication:
         remote_app_uri: "Please enter a proper URL, e.g. http://<server>:<port>"
-        save_remote_couch_config: "The URL/Username/Password that you entered is incorrect"
+        remote_unauthorized: "The username or password that you entered is incorrect"
+        remote_error: "Could not connect to the remote instance - is it running?"
         is_continuous: 'Continuous Replication?'
 
       password_recovery_request:
