continue form customization cleanup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -717,6 +717,10 @@ en:
     text_area: "Text Area"
     numeric_field: "Numeric Field"
     date_field: "Date Field"
+    date_range_field: "Date Range"
+    subform: "Subform"
+    tick_box: "Tick Box"
+    tally_field: "Tally Field"
     successfully_added: "Field successfully added"
     updated: "Field updated"
     deleted: "Field %{display_name} has been deleted."
