--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -711,9 +711,9 @@ en:
     remove: "Remove"
     subform_remove_message: "Are you sure you want to remove this subform?"
     text_field: "Text Field"
-    check_box: "Check boxes"
-    select_box: "Select drop down"
-    radio_button: "Radio button"
+    check_box: "Check Boxes"
+    select_box: "Select Drop Down"
+    radio_button: "Radio Button"
     text_area: "Text Area"
     numeric_field: "Numeric Field"
     date_field: "Date Field"
@@ -721,6 +721,7 @@ en:
     subform: "Subform"
     tick_box: "Tick Box"
     tally_field: "Tally Field"
+    separator: "Separator"
     successfully_added: "Field successfully added"
     updated: "Field updated"
     deleted: "Field %{display_name} has been deleted."
