working on tally and lookup form customization.  WIP

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -568,6 +568,8 @@ en:
   visible: "Visible"
   hidden: "Hidden"
   help_text: "Help text"
+  multi_select: "Multi Select"
+  option_strings_source: "Option Strings Source"
   cancel: "Cancel"
   discard: "Discard"
   form: "Form"
@@ -706,6 +708,9 @@ en:
     field_name: "Field Name"
     display_name: "Display Name"
     option_strings_text: "Options"
+    tally1: "First Tally Field"
+    tally2: "Second Tally Field"
+    tally3: "Third Tally Field"
     form_name: "Form Name"
     action: "Action"
     remove: "Remove"
