--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -708,9 +708,7 @@ en:
     field_name: "Field Name"
     display_name: "Display Name"
     option_strings_text: "Options"
-    tally1: "First Tally Field"
-    tally2: "Second Tally Field"
-    tally3: "Third Tally Field"
+    option_strings_source: "Lookups"
     form_name: "Form Name"
     action: "Action"
     remove: "Remove"
