--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -648,6 +648,7 @@ en:
     buttons:
       add: "Add"
     options: "Options"
+    confirm_delete: Are you sure you want to delete this form?
 
 
   advanced_search:
